fix spacing & font size

--- a/src/components/ratings/StarRating.css
+++ b/src/components/ratings/StarRating.css
@@ -8,7 +8,7 @@
   height: 80;
   border-radius: 10px;
 }
-h2{
+.averageStars h2 {
   width: 50px;
   height: 60px;
   font-size: 40px;
